# cine-reserve

./: .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml
apps/core/: models.py
apps/core/managers/: abstract_manager.py
apps/movie/: models.py  serializers.py  urls.py  views.py
apps/movie/managers/: movie_manager.py
apps/movie/migrations/: 0001_initial.py
apps/movie/tests/: __init__.py  test_models.py  test_views.py
apps/room/: models.py  serializers.py  urls.py  views.py
apps/room/migrations/: 0001_initial.py
apps/seat/: apps.py  models.py  serializers.py  tasks.py
apps/seat/managers/: seat_manager.py  seat_reservation_manager.py
apps/seat/migrations/: 0001_initial.py  0002_seat_session.py  0003_alter_seat_unique_together_seatreservation.py  0004_alter_seatreservation_seat.py
apps/seat/tests/: __init__.py  test_models.py
apps/session/: models.py  serializers.py  urls.py  views.py
apps/session/managers/: session_manager.py
apps/session/migrations/: 0001_initial.py
apps/session/tests/: __init__.py  test_models.py  test_views.py
apps/ticket/: models.py  serializers.py  tasks.py  urls.py  views.py
apps/ticket/managers/: ticket_manager.py
apps/ticket/migrations/: 0001_initial.py
apps/ticket/tests/: __init__.py  test_models.py  test_views.py
apps/user/: models.py  serializers.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_user_date_joined_user_first_name_user_groups_and_more.py  0003_alter_user_options_alter_user_managers.py
setup/: celery.py  settings.py  urls.py
(+3 files in other folders)
